resources/main.css
@import url('https://fonts.googleapis.com/css?family=Exo+2:400,600&display=swap');
@import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i,700&display=swap');

/* fonts */
body {
    background-color: white;
    background-image: url(funky-lines.png);
    color: black;
    font-family: 'Merriweather', serif;
    --red : rgb(255,2,2);
    --green: rgb(2,255,2);
    --yellow: rgb(255,220,0);
    font-size: inherit;
}
h1, h2, h3, h4 {
    font-family: 'Exo 2', sans-serif;
}


/* layout */
body {
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: 1fr;
    margin:1rem;
}

/* less than 500px */
@media only screen and (min-width: 1px) {
    html {
        font-size: 0.8rem;
    }
    #logo {
        grid-column: 1;
        justify-self: center;
        width: 8rem;
    }
    header, footer {
        grid-column: 1;
        justify-self: center;
    }
    aside, main {
        grid-column: 1;
    }
    aside {
        grid-row: 4;
    }
    h1.title {
        font-size: 3.0rem;
    }
    h2.subtitle {
        font-size: 1.5rem;
    }
}

/* greater than 500px */

@media only screen and (min-width: 500px)  {
    html {
        font-size: 0.9rem;
    }
    body {
        grid-template-columns: 10rem auto;
    }
    #logo {
        grid-column: 1;
        justify-self: end;
        align-self: end;
        width: 8rem;
        padding-bottom: 0.3rem;
    }
    header, footer {
        grid-column: 2/ span 3;
        justify-self: start;
    }
    aside {
        grid-column: 1;
        grid-row: 2;
    }
    main {
        grid-column: 2;
    }
    h1.title {
        font-size: 5.0rem;
    }
    h2.subtitle {
        font-size: 2.0rem;
    }
}

/* greater than 800px */
@media only screen and (min-width: 800px)   {
    html {
        font-size: 1.0rem;
    }
    body {
        grid-template-columns: 1fr 3fr;
        max-width: 850px;
        margin:auto;
    }
}



/* ==== styling ==== */


h1.title {
    margin:0;
    padding:0;
    color: var(--red);
}
h2.subtitle {
    margin:0;
    padding:0;
    color: var(--red);
}


main article {
    margin-bottom: 1rem;
    line-height: 175%;
    background-color: white;
    padding: 1rem;
    padding-top:0;
    border-radius: 1rem;
    border: 1px solid #ddd;
}

aside div.panel {
    background-color: white;
    padding: 1rem;
    border-radius: 1rem;
    border: 1px solid #ddd;
    margin: 0 0 1rem 0;
}

main h1 {
    /*background-color: var(--yellow);*/
    /*padding: 0rem 1rem;*/
    /*margin: 0 -1rem 0 -1rem;*/
    font-size: 1.5rem;
}

main article {
    margin-top: 2rem;
}
main article:first-child {
    margin-top: 0;
}
main article:first-child h3 {
    margin-top: 0;
}
main article img {
    max-width: 20rem;
}
main h1 a {
    text-decoration: none;
    color: black;
}

main h3 {
    background-color: transparent;
    margin-top: 2rem;
}

a {
    color: var(--red);
}

h3 a {
    color: inherit;
    text-decoration: none;
}

blockquote {
    border-left: 1px solid var(--red);
    padding-left: 0.5rem;
}


header h1 a, header h2 a{
    text-decoration: none;
}


div.blurb {
    border: 1px solid #dddddd;
    padding: 1.0rem;
    border-radius: 0.5rem;
    background-color: #f0f0f0;
}

